# Langgraph

./: .gitignore  README.md
JupyterNotebookVenvSetup/: README.md  getting-started.ipynb
LangchainAcademyLangGraph/: Notes.ipynb  README.md  main.py  pyproject.toml
LangchainAcademyLangGraph/Project_Build_Ambient_Agents/: README.md
LangchainAcademyLangGraph/Project_Build_Ambient_Agents/LangGraph101/: langgraph_101.ipynb
LangchainAcademyLangGraph/Project_Build_Ambient_Agents/email_assistant/: prompts.py  utils.py
LangchainAcademyLangGraph/Project_Build_Ambient_Agents/email_assistant/tools/default/: prompt_templates.py
LangchainAcademyLangGraph/Project_Build_Ambient_Agents/notebooks/: agent.ipynb
LangchainAcademyLangGraph/module-0/: basics.ipynb
LangchainAcademyLangGraph/module-1/: simple-graph.ipynb
LangchainAcademyLangGraph/module-1/studio/: agent.py  langgraph.json  router.py
PythonLibForAI/: README.md  httpx_http.py  requests_authentication.py  requests_error_handling.py  requests_http.py  requirements.txt
deep-agents-from-scratch-main/notebooks/: 0_create_agent.ipynb  1_todo.ipynb
deepagents-master/: .gitignore  Notes.md
